--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Brothers_Wedding_Doc</title>
   </head>
   <body>
